# lyric-transcription

./: README.md  pyproject.toml
src/whisper_lyrics/: cli.py  exceptions.py  pipeline.py
src/whisper_lyrics/stages/: cleanup.py  separate.py  transcribe.py  transcribe_hf.py
training/: config.py  download.py  evaluate.py  exceptions.py  infer.py  preprocess.py  train.py
