[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-lyrics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper",
    "demucs>=4.0.1",
    "torch>=2.3,<3",
]

[project.scripts]
whisper-lyrics = "whisper_lyrics.cli:main"

[project.optional-dependencies]
training = [
    "transformers>=4.45",
    "peft>=0.7",
    "datasets>=2.16",
    "evaluate>=0.4",
    "jiwer>=3.0",
    "g2p_en>=2.1",
    "soundfile>=0.12",
    "accelerate>=0.26",
    "dali-dataset",
]

[tool.setuptools.packages.find]
where = ["src"]
